[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Font/blrrpixs016.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://prefabs/inGameUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/pause.png" type="Texture" id=4]
[ext_resource path="res://Assets/dash_btn.png" type="Texture" id=5]
[ext_resource path="res://Assets/dash_btn_down.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=13]
size = 24
outline_size = 1
outline_color = Color( 0.0705882, 0.0627451, 0.239216, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 18
outline_size = 1
outline_color = Color( 0.0705882, 0.0627451, 0.239216, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 18
outline_size = 1
outline_color = Color( 0.0705882, 0.0627451, 0.239216, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 18
outline_color = Color( 0.172549, 0.0666667, 0.239216, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.364706, 0.670588, 0.831373, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.239216 )
shadow_size = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.168627, 0.556863, 0.760784, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[node name="inGameUI" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="levelLabel" type="Label" parent="Control"]
anchor_right = 1.0
margin_top = 34.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.498039, 0.92549, 1, 1 )
custom_colors/font_color_shadow = Color( 0.392157, 0.647059, 0.819608, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 13 )
text = "Level 1"
align = 1
valign = 1

[node name="coinCounter" type="Label" parent="Control/levelLabel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -134.0
margin_top = -5.0
margin_right = 134.0
margin_bottom = 24.0
custom_colors/font_color_shadow = Color( 0.439216, 0.439216, 0.439216, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 12 )
text = "0/3"
align = 1
valign = 1

[node name="timerLabel" type="Label" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -39.0
margin_bottom = -17.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.321569, 0.321569, 0.321569, 1 )
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 9 )
text = "00:00:00"
align = 1
valign = 1

[node name="pauseBtn" type="TextureButton" parent="Control"]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
margin_left = -51.0
margin_top = 8.0
margin_right = -6.0
margin_bottom = 53.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="dashBtn" type="TextureButton" parent="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -136.0
margin_right = 30.0
margin_bottom = -76.0
grow_horizontal = 2
size_flags_horizontal = 0
action_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="bg" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.470588, 0.764706, 1, 0.882353 )

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/CenterContainer"]
margin_left = 49.0
margin_top = 167.0
margin_right = 219.0
margin_bottom = 313.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_right = 170.0
margin_bottom = 44.0
custom_colors/font_color_shadow = Color( 0.364706, 0.670588, 0.831373, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 4 )
text = "Paused"
align = 1
valign = 1

[node name="resumeBtn" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 170.0
margin_bottom = 78.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 11 )
text = "Resume Game"

[node name="restartBtn" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 170.0
margin_bottom = 112.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 11 )
text = "Restart"

[node name="mainMenuBtn" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 170.0
margin_bottom = 146.0
rect_min_size = Vector2( 170, 0 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 11 )
text = "Back to Main Menu"

[connection signal="pressed" from="Control/pauseBtn" to="." method="_on_pauseBtn_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/resumeBtn" to="." method="_on_resumeBtn_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/restartBtn" to="." method="_on_restartBtn_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/mainMenuBtn" to="." method="_on_mainMenuBtn_pressed"]
